fixed alignment

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -4,9 +4,10 @@ body{
   color: #757780;
 }
 
+
 .container{
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
 
   font-family: 'Quicksand' sans-serif;
   font-weight: bold;
@@ -15,7 +16,7 @@ body{
   display: grid;
 
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 100px 400px 400px 400px;
+  grid-template-rows: 100px 400px 400px 500px;
 
 }
 .buttons{
@@ -60,7 +61,7 @@ body{
 .landimage .promobox{
   background-color: red;
   height: 400px;
-  width:800px;
+  width: 800px;
   float:right;
   margin: 100px;
 
@@ -70,7 +71,7 @@ body{
   grid-column-end: 4;
 
   grid-row-start: 4;
-  grid-row-end:4;
+  grid-row-end: 5;
   display: flex;
   width: 100%;
   height: 500px;
